added the images

--- a/learn_more.html
+++ b/learn_more.html
@@ -174,7 +174,7 @@
           </div>
 
             <div class="art-card">
-                <img src="Images/bottle-turtle.avif" alt="">
+                <img src="images/plastic_bottle_turtle.jpg" alt="">
                 <div class="art-card-content">
                     <h3>Ocean Sculpture</h3>
                     <p>An impressive sculpture made from discarded plastic bottles, highlighting marine pollution.</p>
