--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@
         <h3>Quick Links</h3>
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#action">Take Action</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="take_action.html">Take Action</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
       </div>
