some more chnages
linking the pages

--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
   <header>
     <div class="logo">
       <a href="index.html">
-        <img src="Images/Horizontal_Logo_Negative.png" alt="Company Logo" class="logo-image">
+        <img src="images/Horizontal_Logo_Negative.png" alt="Company Logo" class="logo-image">
       </a>
     </div>
     <nav>
@@ -41,7 +41,7 @@
       <div class="section_container">
         <div class="section_container_block">
           <div class="section_container_block_image">
-            <img src="Images/Karolina1.JPEG" alt="">
+            <img src="images/Karolina1.JPEG" alt="">
           </div>
           <div class="section_container_block_text">
             <div class="section_container_block_text_top">
@@ -51,7 +51,7 @@
         </div>
         <div class="section_container_block">
             <div class="section_container_block_image">
-              <img src="Images/Daria1.JPEG" alt="">
+              <img src="images/Daria1.JPEG" alt="">
             </div>
             <div class="section_container_block_text">
               <div class="section_container_block_text_top">
@@ -61,7 +61,7 @@
         </div>
         <div class="section_container_block">
             <div class="section_container_block_image">
-              <img src="Images/Mihaela1.jpg" alt="">
+              <img src="images/Mihaela1.jpg" alt="">
             </div>
             <div class="section_container_block_text">
               <div class="section_container_block_text_top">
@@ -103,7 +103,7 @@
       <div class="our_mission_container">
         <div class="our_mission_container_block">
           <div class="our_mission_container_block_left_area">
-            <img src="Images/PlasticFree.webp" alt="">
+            <img src="images/PlasticFree.webp" alt="">
           </div>
           <div class="our_mission_container_block_right_area">
               <div class="our_mission_container_block_right_area_text">
