--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
   <header>
     <div class="logo">
       <a href="index.html">
-        <img src="Images/Horizontal_Logo_Negative.png" alt="Company Logo" class="logo-image">
+        <img src="images/Horizontal_Logo_Negative.png" alt="Company Logo" class="logo-image">
       </a>
     </div>
     <nav>
@@ -80,8 +80,8 @@
             <h3>Quick Links</h3>
             <ul>
               <li><a href="index.html">Home</a></li>
-              <li><a href="#about">About</a></li>
-              <li><a href="#action">Take Action</a></li>
+              <li><a href="about.html">About</a></li>
+              <li><a href="take_action.html">Take Action</a></li>
               <li><a href="contract.html">Contact</a></li>
             </ul>
           </div>
