--- a/learn_more.html
+++ b/learn_more.html
@@ -11,7 +11,7 @@
   <header>
     <div class="logo">
       <a href="index.html">
-        <img src="Images/Horizontal_Logo_Negative.png" alt="Company Logo" class="logo-image">
+        <img src="images/Horizontal_Logo_Negative.png" alt="Company Logo" class="logo-image">
       </a>
     </div>
     <nav>
@@ -66,91 +66,91 @@
       <div class="slider-wrapper">
         <div class="slider">
           <div class="slide">
-            <img id="slide-1" src="Images/image1.webp" alt="fact1">
+            <img id="slide-1" src="images/image1.webp" alt="fact1">
             <div class="text-box">
               <p>Over 8 million tons of plastic enter the oceans every year, threatening marine life.</p>
             </div>
           </div>
           <div class="slide">
-            <img id="slide-2" src="Images/image2.jpg" alt="fact2">
+            <img id="slide-2" src="images/image2.jpg" alt="fact2">
             <div class="text-box">
               <p>Plastic takes up to 1,000 years to break down in the environment.</p>
             </div>
           </div>
           <div class="slide">
-            <img id="slide-3" src="Images/image3.3.jpg" alt="fact3">
+            <img id="slide-3" src="images/image3.3.jpg" alt="fact3">
             <div class="text-box">
               <p>Plastic bags take up to 1,000 years to break down and are among the most common items found in litter surveys.</p>
             </div>
           </div>
           <div class="slide">
-            <img id="slide-4" src="Images/image4.jpg" alt="fact4">
+            <img id="slide-4" src="images/image4.jpg" alt="fact4">
             <div class="text-box">
               <p>The Great Pacific Garbage Patch is a floating mass of plastic waste covering an area roughly twice the size of Texas.</p>
             </div>
           </div>
           <div class="slide">
-            <img id="slide-5" src="Images/image5.jpeg" alt="fact5">
+            <img id="slide-5" src="images/image5.jpeg" alt="fact5">
             <div class="text-box">
               <p>Plastic pollution is found in the Arctic, with even remote areas affected by waste carried by ocean currents.</p>
             </div>
           </div>
           <div class="slide">
-            <img id="slide-6" src="Images/image6.6.jpg" alt="fact6">
+            <img id="slide-6" src="images/image6.6.jpg" alt="fact6">
             <div class="text-box">
               <p>Plastic waste in the ocean kills over 1 million seabirds and 100,000 marine mammals annually.</p>
             </div>
           </div>
           <div class="slide">
-            <img id="slide-7" src="Images/image7.jpg" alt="fact7">
+            <img id="slide-7" src="images/image7.jpg" alt="fact7">
             <div class="text-box">
               <p>Around 79% of plastic waste ends up in landfills or the environment, rather than being recycled.</p>
             </div>
           </div>
           <div class="slide">
-            <img id="slide-8" src="Images/image8.8.jpeg" alt="fact8">
+            <img id="slide-8" src="images/image8.8.jpeg" alt="fact8">
             <div class="text-box">
               <p>Microplastics have been found in human drinking water, air, and even in food products.</p>
             </div>
           </div>
           <div class="slide">
-            <img id="slide-9" src="Images/image9.png" alt="fact9">
+            <img id="slide-9" src="images/image9.png" alt="fact9">
             <div class="text-box">
               <p>Over 60% of all plastic waste is used for packaging, which is typically used only once before being discarded.</p>
             </div>
           </div>
           <div class="slide">
-            <img id="slide-10" src="Images/image10.jpg" alt="fact10">
+            <img id="slide-10" src="images/image10.jpg" alt="fact10">
             <div class="text-box">
               <p>More than 400 million tons of plastic are produced globally each year.</p>
             </div>
           </div>
           <div class="slide">
-            <img id="slide-11" src="Images/image11.jpg" alt="fact11">
+            <img id="slide-11" src="images/image11.jpg" alt="fact11">
             <div class="text-box">
               <p>Nearly 90% of sea turtles have ingested plastic, mistaking it for food.</p>
             </div>
           </div>
           <div class="slide">
-            <img id="slide-12" src="Images/image12.jpeg" alt="fact12">
+            <img id="slide-12" src="images/image12.jpeg" alt="fact12">
             <div class="text-box">
               <p>Less than 10% of plastic used globally is recycled into new products.</p>
             </div>
           </div>
           <div class="slide">
-            <img id="slide-13" src="Images/image13.jpg" alt="fact13">
+            <img id="slide-13" src="images/image13.jpg" alt="fact13">
             <div class="text-box">
               <p>The production of plastic releases large amounts of greenhouse gases, contributing to climate change.</p>
             </div>
           </div>
           <div class="slide">
-            <img id="slide-14" src="Images/image14.jpeg" alt="fact14">
+            <img id="slide-14" src="images/image14.jpeg" alt="fact14">
             <div class="text-box">
               <p>Recycling one ton of plastic can save up to 5,774 kWh of energy, enough to power a home for 6 months.</p>
             </div>
           </div>
           <div class="slide">
-            <img id="slide-15" src="Images/image15.jpg" alt="fact15">
+            <img id="slide-15" src="images/image15.jpg" alt="fact15">
             <div class="text-box">
               <p>By 2050, it's estimated there will be more plastic than fish in the oceans (by weight).</p>
             </div>
@@ -166,7 +166,7 @@
         <p>See how artists transform plastic waste into stunning artworks and inspire change.</p>
         <div class="art-container">
           <div class="art-card">
-            <img src="Images/earrings.JPEG" alt="">
+            <img src="images/earrings.JPEG" alt="">
             <div class="art-card-content">
                 <h3>Plastic Petals</h3>
                 <p>By transforming waste into beautiful art, these earrings help reduce plastic pollution and promote environmental consciousness.</p>
@@ -182,7 +182,7 @@
             </div>
 
             <div class="art-card">
-                <img src="Images/plastic-mural-1.jpg" alt=""> 
+                <img src="images/plastic-mural-1.jpg" alt=""> 
                 <div class="art-card-content">
                     <h3>Plastic Mural</h3>
                     <p>A vibrant mural created from colorful plastic waste, showcasing the potential of recycling art.</p>
@@ -190,7 +190,7 @@
             </div>
 
             <div class="art-card">
-                <img src="Images/recycled-fashion-1.jpg" alt="">
+                <img src="images/recycled-fashion-1.jpg" alt="">
                 <div class="art-card-content">
                     <h3>Recycled Fashion</h3>
                     <p>Fashion pieces crafted from plastic bags and wrappers, merging sustainability with creativity.</p>
@@ -198,7 +198,7 @@
             </div>
 
             <div class="art-card">
-              <img src="Images/bristol-whales.jpg" alt=""> 
+              <img src="images/bristol-whales.jpg" alt=""> 
               <div class="art-card-content">
                   <h3>Bristol Whales</h3>
                   <p>The larger-than-life whales are depicted as emerging and diving into a sea of plastic waste.</p>
@@ -206,7 +206,7 @@
             </div>
 
             <div class="art-card">
-              <img src="Images/blox-and-bax.jpg" alt="">
+              <img src="images/blox-and-bax.jpg" alt="">
               <div class="art-card-content">
                   <h3>Blox and Bax</h3>
                   <p>Plastic and electrical appliances used from the garbage to create fantastical dioramas.</p>
@@ -214,7 +214,7 @@
             </div>
 
             <div class="art-card">
-              <img src="Images/Bounty, Pilfered.png" alt="">
+              <img src="images/Bounty, Pilfered.png" alt="">
               <div class="art-card-content">
                   <h3>Bounty, Pilfered</h3>
                   <p>This sculpture made by collected and transformed oceanic plastic.</p>
@@ -222,7 +222,7 @@
             </div>
 
             <div class="art-card">
-              <img src="Images/washed-ashore.jpg" alt="">
+              <img src="images/washed-ashore.jpg" alt="">
               <div class="art-card-content">
                   <h3>Washed Ashore</h3>
                   <p>This trash is then washed, sorted, and prepared for the creation process.</p>
@@ -238,7 +238,7 @@
       <div class="gpt_container">
         <div class="gpt_container_block">
           <div class="gpt_container_block_left_area">
-            <img src="Images/world_in_plastic.jpg" alt="">
+            <img src="images/world_in_plastic.jpg" alt="">
           </div>
           <div class="gpt_container_block_right_area">
               <div class="gpt_container_block_right_area_text">
@@ -253,10 +253,10 @@
             </div>
           </div>
           <div class="gpt_1_container_block_left_area">
-            <img src="Images/waste_landfill.jpg" alt="">
+            <img src="images/waste_landfill.jpg" alt="">
           </div>
           <div class="gpt_container_block_left_area">
-            <img src="Images/global-plastics-treaty.webp" alt="">
+            <img src="images/global-plastics-treaty.webp" alt="">
           </div>
           <div class="gpt_container_block_right_area">
               <div class="gpt_container_block_right_area_text">
@@ -280,8 +280,8 @@
         <h3>Quick Links</h3>
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#action">Take Action</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="take_action.html">Take Action</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
       </div>
