--- a/take_action.html
+++ b/take_action.html
@@ -11,7 +11,7 @@
   <header>
     <div class="logo">
       <a href="index.html">
-        <img src="Images/Horizontal_Logo_Negative.png" alt="Company Logo" class="logo-image">
+        <img src="images/Horizontal_Logo_Negative.png" alt="Company Logo" class="logo-image">
       </a>
     </div>
     <nav>
@@ -42,7 +42,7 @@
         <p>Discover easy-to-make recipes and creative projects to reduce plastic use in your daily life.</p>
         <div class="tips-container">
             <div class="tip-card">
-                <img src="Images/homemade-toothpaste.jpg" alt="">
+                <img src="images/homemade-toothpaste.jpg" alt="">
                 <div class="tip-card-content">
                     <h3>Zero-Waste Toothpaste</h3>
                     <p>Learn how to make your own natural toothpaste using simple, plastic-free ingredients like baking soda and coconut oil.</p>
@@ -50,7 +50,7 @@
                 </div>
               </div>
             <div class="tip-card">
-                <img src="Images/reusable-beeswrap.webp" alt="">
+                <img src="images/reusable-beeswrap.webp" alt="">
                 <div class="tip-card-content">
                     <h3>Reusable Beeswax Wraps</h3>
                     <p>Create eco-friendly wraps to replace single-use plastic wrap using beeswax, cotton cloth, and tree resin.</p>
@@ -58,7 +58,7 @@
                 </div>
             </div>
             <div class="tip-card">
-                <img src="Images/DIY-cleaning-spray.jpg" alt=""> 
+                <img src="images/DIY-cleaning-spray.jpg" alt=""> 
                 <div class="tip-card-content">
                   <h3>DIY Cleaning Spray</h3>
                   <p>Mix vinegar, water, and essential oils in a reusable glass bottle to create an all-purpose cleaner.</p>
@@ -196,21 +196,21 @@
       <h2 class="section-title">Upcoming Conferences and Events</h2>
       <div class="events-container">
         <div class="event-card">
-          <img src="Images/CO2 capture.jpeg" alt="">
+          <img src="images/CO2 capture.jpeg" alt="">
           <h3 class="event-title">CO2 Capture, Storage& Reuse</h3>
           <p class="event-date">Date: May 21-22, 2025</p>
           <p class="event-location">Location: Copenhagen</p>
           <a href="https://fortesmedia.com/co2-capture-storage-reuse-2025,4,en,2,1,106.html" class="cta-button" target="_blank">Check Out</a>
         </div>
         <div class="event-card">
-          <img src="Images/clean-up_month.jpg" alt="">
+          <img src="images/clean-up_month.jpg" alt="">
           <h3 class="event-title">National Cleanup Month</h3>
           <p class="event-date">Date: to be determined</p>
           <p class="event-location">Location: to be determined</p>
           <a href="https://www.nationalcleanupday.org/" class="cta-button" target="_blank">Check Out</a>
         </div>
         <div class="event-card">
-          <img src="Images/cleanup-day.jpeg" alt="">
+          <img src="images/cleanup-day.jpeg" alt="">
           <h3 class="event-title">World Clean Up</h3>
           <p class="event-date">Date: Sep 14-20, 2025</p>
           <p class="event-location">Location: Copenhagen</p>
@@ -231,8 +231,8 @@
         <h3>Quick Links</h3>
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#action">Take Action</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="take_action.html">Take Action</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
       </div>
