--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <header>
     <div class="logo">
       <a href="index.html">
-        <img src="Images/Horizontal_Logo_Negative.png" alt="Company Logo" class="logo-image">
+        <img src="images/Horizontal_Logo_Negative.png" alt="Company Logo" class="logo-image">
       </a>
     </div>
     <nav>
@@ -58,7 +58,7 @@
 
     <section class="fullscreen-video">
       <video autoplay muted loop playsinline>
-        <source src="Images/OurPlanet_FreeOfPlasticSound.mp4" type="video/mp4">
+        <source src="images/OurPlanet_FreeOfPlasticSound.mp4" type="video/mp4">
       </video>
     </section>
     
@@ -74,10 +74,10 @@
           </p>
         </div>
         <div class="grid-item">
-          <img src="Images/Seal.png" alt="A seal entangled in plastic waste" />
+          <img src="images/Seal.png" alt="A seal entangled in plastic waste" />
         </div>
         <div class="grid-item">
-          <img src="Images/Nothankyou.png" alt="No plastic" />
+          <img src="images/Nothankyou.png" alt="No plastic" />
         </div>
         <div class="grid-item">
           <p>
