adding the Learn more page in the menu

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
+        <li><a href="learn_more.html">Learn More</a></li>
         <li><a href="take_action.html">Take Action</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
@@ -131,6 +132,7 @@
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
+          <li><a href="learn_more.html">Learn More</a></li>
           <li><a href="take_action.html">Take Action</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
