--- a/about.html
+++ b/about.html
@@ -18,6 +18,7 @@
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
+        <li><a href="learn_more.html">Learn More</a></li>
         <li><a href="take_action.html">Take Action</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
@@ -128,8 +129,9 @@
         <h3>Quick Links</h3>
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#action">Take Action</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="learn_more.html">Learn More</a></li>
+          <li><a href="take_action.html">Take Action</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
       </div>
