--- a/contact.html
+++ b/contact.html
@@ -17,6 +17,7 @@
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
+        <li><a href="learn_more.html">Learn More</a></li>
         <li><a href="take_action.html">Take Action</a></li>
         <li><a href="contract.html">Contact</a></li>
       </ul>
@@ -81,6 +82,7 @@
             <ul>
               <li><a href="index.html">Home</a></li>
               <li><a href="about.html">About</a></li>
+              <li><a href="learn_more.html">Learn More</a></li>
               <li><a href="take_action.html">Take Action</a></li>
               <li><a href="contract.html">Contact</a></li>
             </ul>
