--- a/take_action.html
+++ b/take_action.html
@@ -18,6 +18,7 @@
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
+        <li><a href="learn_more.html">Learn More</a></li>
         <li><a href="take_action.html">Take Action</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
@@ -232,6 +233,7 @@
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
+          <li><a href="learn_more.html">Learn More</a></li>
           <li><a href="take_action.html">Take Action</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
