adding the compressed video

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
     <section class="fullscreen-video">
       <video autoplay muted loop playsinline>
-        <source src="images/OurPlanet_FreeOfPlasticSound.mp4" type="video/mp4">
+        <source src="images/smaller_video.mov" type="video/mp4">
       </video>
     </section>
     
@@ -75,10 +75,10 @@
           </p>
         </div>
         <div class="grid-item">
-          <img src="images/Seal.png" alt="A seal entangled in plastic waste" />
+          <img src="images/Seal-1.png" alt="A seal entangled in plastic waste" />
         </div>
         <div class="grid-item">
-          <img src="images/Nothankyou.png" alt="No plastic" />
+          <img src="images/Nothankyou-1.png" alt="No plastic" />
         </div>
         <div class="grid-item">
           <p>
