--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
     <section class="hero">
       <h1>A future free from plastic pollution starts with us!</h1>
       <p>
-        Fighting Plastic Pollution for a Cleaner Future
+        Fighting plastic pollution for a cleaner Future
       </p>
       <a href="learn_more.html" class="cta-button" target="_blank">
         Learn more
