--- a/learn_more.html
+++ b/learn_more.html
@@ -28,7 +28,7 @@
   
   <main>
     <section class="hero">
-      <h1>Understanding Plastic Pollution and Global Solutions</h1>
+      <h1>Understanding plastic pollution and global solutions</h1>
       <p>
         Explore the global efforts and essential facts that are shaping the fight against plastic pollution.
       </p>
@@ -37,7 +37,7 @@
 
     <section class="plastic-lifecycle">
       <div class="flowchart-container">
-        <h2>The Lifecycle of Plastic</h2>
+        <h2>The lifecycle of plastic</h2>
         <p>Explore how plastic moves through its lifecycle and impacts our planet.</p>
         <div class="flowchart">
             <div class="stage">
@@ -62,7 +62,7 @@
 
 
     <section class="slider_container">
-      <h2>Shocking Truths About Plastic</h2>
+      <h2>Shocking truths about plastic</h2>
       
       <div class="slider-wrapper">
         <div class="slider">
@@ -163,7 +163,7 @@
 
     <section class="art-against-plastic">
       <div class="art-section">
-        <h2>Art and Creativity Against Plastic Pollution</h2>
+        <h2>Art and creativity against plastic pollution</h2>
         <p>See how artists transform plastic waste into stunning artworks and inspire change.</p>
         <div class="art-container">
           <div class="art-card">
