--- a/take_action.html
+++ b/take_action.html
@@ -28,7 +28,7 @@
   
   <main>
     <section class="hero">
-      <h1>Turn Awareness Into Action</h1>
+      <h1>Turn awareness into action</h1>
       <p>
         Discover simple actions to reduce plastic waste and protect what matters most. Together, We Can Break Free from Plastic.
       </p>
@@ -39,7 +39,7 @@
 
     <section class="recipes-and-tips">
       <div class="tips-section">
-        <h2>Plastic-Free Recipes and DIY Tips</h2>
+        <h2>Plastic-free recipes and DIY tips</h2>
         <p>Discover easy-to-make recipes and creative projects to reduce plastic use in your daily life.</p>
         <div class="tips-container">
             <div class="tip-card">
@@ -71,11 +71,11 @@
     </section>
 
     <section class="guide-section">
-      <h2>Your Step-by-Step Guide to Reducing Plastic Pollution</h2>
+      <h2>Your step-by-step guide to reducing plastic pollution</h2>
        <div class="guide-conatiner">
         <div class="guide-block-1">
           <div class="step-box">
-            <h3>Switch to Reusable Products</h3>
+            <h3>Switch to reusable products</h3>
             <p>Instead of disposable plastic bags, water bottles, or straws, opt for reusable alternatives made of materials like metal, glass, or fabric. This small change can greatly reduce the demand for single-use plastics.</p>
           </div>
           <div class="step-circle">
@@ -86,7 +86,7 @@
 
         <div class="guide-block-2">
           <div class="step-box">
-            <h3>Buy in Bulk</h3>
+            <h3>Buy in bulk</h3>
             <p>Purchase items in bulk to minimize packaging waste. Many stores now offer bulk bins for staples like grains, nuts, and spices where you can use your own containers.</p>
           </div>
           <div class="step-circle">
@@ -98,7 +98,7 @@
 
         <div class="guide-block-1">
           <div class="step-box">
-            <h3>Skip Plastic Cutlery</h3>
+            <h3>Skip plastic cutlery</h3>
             <p>When ordering takeout or dining out, decline plastic utensils and bring your own reusable set if needed. These single-use items often end up in landfills or oceans.</p>
           </div>
           <div class="step-circle">
@@ -110,7 +110,7 @@
 
         <div class="guide-block-2">
           <div class="step-box">
-            <h3>Learn Local Recycling Rules</h3>
+            <h3>Learn local recycling rules</h3>
             <p>Every municipality has different rules for recycling. Understand what plastics are accepted in your area to avoid contamination, which can cause entire batches of recyclables to go to waste.</p>
           </div>
           <div class="step-circle">
@@ -122,7 +122,7 @@
 
         <div class="guide-block-1">
           <div class="step-box">
-            <h3>Clean Before Recycling</h3>
+            <h3>Clean before recycling</h3>
             <p>Rinse out containers before recycling them. Leftover food or liquids can spoil the recycling process and make materials unrecyclable.</p>
           </div>
           <div class="step-circle">
@@ -134,7 +134,7 @@
         </div>
         <div class="guide-block-2">
           <div class="step-box">
-            <h3>Drop Off Specialty Plastics</h3>
+            <h3>Drop off specialty plastics</h3>
             <p>Take hard-to-recycle plastics like bags, bubble wrap, or shrink wrap to specialized drop-off locations. Many grocery stores have bins for collecting these items.</p>
           </div>
           <div class="step-circle">
@@ -146,7 +146,7 @@
 
         <div class="guide-block-1">
           <div class="step-box">
-            <h3>Choose Natural Alternatives</h3>
+            <h3>Choose natural alternatives</h3>
             <p>Look for everyday products made from natural materials, such as bamboo toothbrushes, wooden combs, or beeswax wraps, which are biodegradable and sustainable.</p>
           </div>
           <div class="step-circle">
@@ -158,7 +158,7 @@
 
         <div class="guide-block-2">
           <div class="step-box">
-            <h3>Support Plastic-Free Brands</h3>
+            <h3>Support plastic-free brands</h3>
             <p>Buy from companies that prioritize eco-friendly packaging or are entirely plastic-free. Supporting these businesses encourages industry-wide change.</p>
           </div>
           <div class="step-circle">
@@ -170,7 +170,7 @@
 
         <div class="guide-block-1">
           <div class="step-box">
-            <h3>DIY Personal Care Items</h3>
+            <h3>DIY personal care items</h3>
             <p>Make your own personal care products, such as soaps or cleaning solutions, to avoid the plastic containers they often come in. Recipes can be simple and fun to make.</p>
           </div>
           <div class="step-circle">
@@ -182,7 +182,7 @@
 
         <div class="guide-block-2">
           <div class="step-box">
-            <h3>Advocate for Change</h3>
+            <h3>Advocate for change</h3>
             <p>Support policies and initiatives that aim to reduce plastic pollution, such as bans on single-use plastics or incentives for sustainable practices.</p>
           </div>
           <div class="step-circle">
@@ -194,7 +194,7 @@
     </section>
 
     <section class="events-section">
-      <h2 class="section-title">Upcoming Conferences and Events</h2>
+      <h2 class="section-title">Upcoming conferences and events</h2>
       <div class="events-container">
         <div class="event-card">
           <img src="images/CO2 capture.jpeg" alt="">
