--- a/about.html
+++ b/about.html
@@ -80,7 +80,7 @@
       <div class="our_values_container">
           <div class="our_values_container_block">
               <div class="circle1">
-                  <h3>Awarness</h3>
+                  <h3>Awareness</h3>
               </div>
               <p>Awareness means understanding the impact of plastic pollution on our planet. By spreading knowledge, we inspire individuals and communities to recognize the urgency of the issue.</p>
           </div>
