adding alt description to images

--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
       <div class="section_container">
         <div class="section_container_block">
           <div class="section_container_block_image">
-            <img src="images/Karolina1.JPEG" alt="">
+            <img src="images/Karolina1.JPEG" alt="Karolina-picture">
           </div>
           <div class="section_container_block_text">
             <div class="section_container_block_text_top">
@@ -52,7 +52,7 @@
         </div>
         <div class="section_container_block">
             <div class="section_container_block_image">
-              <img src="images/Daria1.JPEG" alt="">
+              <img src="images/Daria1.JPEG" alt="Daria-picture">
             </div>
             <div class="section_container_block_text">
               <div class="section_container_block_text_top">
@@ -62,7 +62,7 @@
         </div>
         <div class="section_container_block">
             <div class="section_container_block_image">
-              <img src="images/Mihaela1.jpg" alt="">
+              <img src="images/Mihaela1.jpg" alt="Mihaela-picture">
             </div>
             <div class="section_container_block_text">
               <div class="section_container_block_text_top">
@@ -104,7 +104,7 @@
       <div class="our_mission_container">
         <div class="our_mission_container_block">
           <div class="our_mission_container_block_left_area">
-            <img src="images/PlasticFree.webp" alt="">
+            <img src="images/PlasticFree.webp" alt="PlasticFree">
           </div>
           <div class="our_mission_container_block_right_area">
               <div class="our_mission_container_block_right_area_text">
