--- a/learn_more.html
+++ b/learn_more.html
@@ -167,7 +167,7 @@
         <p>See how artists transform plastic waste into stunning artworks and inspire change.</p>
         <div class="art-container">
           <div class="art-card">
-            <img src="images/earrings.JPEG" alt="">
+            <img src="images/earrings.JPEG" alt="earings">
             <div class="art-card-content">
                 <h3>Plastic Petals</h3>
                 <p>By transforming waste into beautiful art, these earrings help reduce plastic pollution and promote environmental consciousness.</p>
@@ -175,7 +175,7 @@
           </div>
 
             <div class="art-card">
-                <img src="images/plastic_bottle_turtle.jpg" alt="">
+                <img src="images/plastic_bottle_turtle.jpg" alt="plastic_bottle_turtle">
                 <div class="art-card-content">
                     <h3>Ocean Sculpture</h3>
                     <p>An impressive sculpture made from discarded plastic bottles, highlighting marine pollution.</p>
@@ -183,7 +183,7 @@
             </div>
 
             <div class="art-card">
-                <img src="images/plastic-mural-1.jpg" alt=""> 
+                <img src="images/plastic-mural-1.jpg" alt="plastic-mural-1"> 
                 <div class="art-card-content">
                     <h3>Plastic Mural</h3>
                     <p>A vibrant mural created from colorful plastic waste, showcasing the potential of recycling art.</p>
@@ -191,7 +191,7 @@
             </div>
 
             <div class="art-card">
-                <img src="images/recycled-fashion-1.jpg" alt="">
+                <img src="images/recycled-fashion-1.jpg" alt="recycled-fashion-1">
                 <div class="art-card-content">
                     <h3>Recycled Fashion</h3>
                     <p>Fashion pieces crafted from plastic bags and wrappers, merging sustainability with creativity.</p>
@@ -199,7 +199,7 @@
             </div>
 
             <div class="art-card">
-              <img src="images/bristol-whales.jpg" alt=""> 
+              <img src="images/bristol-whales.jpg" alt="bristol-whales"> 
               <div class="art-card-content">
                   <h3>Bristol Whales</h3>
                   <p>The larger-than-life whales are depicted as emerging and diving into a sea of plastic waste.</p>
@@ -207,7 +207,7 @@
             </div>
 
             <div class="art-card">
-              <img src="images/blox-and-bax.jpg" alt="">
+              <img src="images/blox-and-bax.jpg" alt="blox-and-bax">
               <div class="art-card-content">
                   <h3>Blox and Bax</h3>
                   <p>Plastic and electrical appliances used from the garbage to create fantastical dioramas.</p>
@@ -215,7 +215,7 @@
             </div>
 
             <div class="art-card">
-              <img src="images/Bounty, Pilfered.png" alt="">
+              <img src="images/Bounty, Pilfered.png" alt="Bounty, Pilfered">
               <div class="art-card-content">
                   <h3>Bounty, Pilfered</h3>
                   <p>This sculpture made by collected and transformed oceanic plastic.</p>
@@ -223,7 +223,7 @@
             </div>
 
             <div class="art-card">
-              <img src="images/washed-ashore.jpg" alt="">
+              <img src="images/washed-ashore.jpg" alt="washed-ashore">
               <div class="art-card-content">
                   <h3>Washed Ashore</h3>
                   <p>This trash is then washed, sorted, and prepared for the creation process.</p>
@@ -239,7 +239,7 @@
       <div class="gpt_container">
         <div class="gpt_container_block">
           <div class="gpt_container_block_left_area">
-            <img src="images/world_in_plastic.jpg" alt="">
+            <img src="images/world_in_plastic.jpg" alt="world_in_plastic">
           </div>
           <div class="gpt_container_block_right_area">
               <div class="gpt_container_block_right_area_text">
@@ -254,10 +254,10 @@
             </div>
           </div>
           <div class="gpt_1_container_block_left_area">
-            <img src="images/waste_landfill.jpg" alt="">
+            <img src="images/waste_landfill.jpg" alt="waste_landfill">
           </div>
           <div class="gpt_container_block_left_area">
-            <img src="images/global-plastics-treaty.webp" alt="">
+            <img src="images/global-plastics-treaty.webp" alt="global-plastics-treaty">
           </div>
           <div class="gpt_container_block_right_area">
               <div class="gpt_container_block_right_area_text">
