--- a/take_action.html
+++ b/take_action.html
@@ -43,7 +43,7 @@
         <p>Discover easy-to-make recipes and creative projects to reduce plastic use in your daily life.</p>
         <div class="tips-container">
             <div class="tip-card">
-                <img src="images/homemade-toothpaste.jpg" alt="">
+                <img src="images/homemade-toothpaste.jpg" alt="homemade-toothpaste">
                 <div class="tip-card-content">
                     <h3>Zero-Waste Toothpaste</h3>
                     <p>Learn how to make your own natural toothpaste using simple, plastic-free ingredients like baking soda and coconut oil.</p>
@@ -51,7 +51,7 @@
                 </div>
               </div>
             <div class="tip-card">
-                <img src="images/reusable-beeswrap.webp" alt="">
+                <img src="images/reusable-beeswrap.webp" alt="reusable-beeswrap">
                 <div class="tip-card-content">
                     <h3>Reusable Beeswax Wraps</h3>
                     <p>Create eco-friendly wraps to replace single-use plastic wrap using beeswax, cotton cloth, and tree resin.</p>
@@ -59,7 +59,7 @@
                 </div>
             </div>
             <div class="tip-card">
-                <img src="images/DIY-cleaning-spray.jpg" alt=""> 
+                <img src="images/DIY-cleaning-spray.jpg" alt="DIY-cleaning-spray"> 
                 <div class="tip-card-content">
                   <h3>DIY Cleaning Spray</h3>
                   <p>Mix vinegar, water, and essential oils in a reusable glass bottle to create an all-purpose cleaner.</p>
@@ -197,21 +197,21 @@
       <h2 class="section-title">Upcoming conferences and events</h2>
       <div class="events-container">
         <div class="event-card">
-          <img src="images/CO2 capture.jpeg" alt="">
+          <img src="images/CO2 capture.jpeg" alt="co2-capture-storage-reuse-2025">
           <h3 class="event-title">CO2 Capture, Storage& Reuse</h3>
           <p class="event-date">Date: May 21-22, 2025</p>
           <p class="event-location">Location: Copenhagen</p>
           <a href="https://fortesmedia.com/co2-capture-storage-reuse-2025,4,en,2,1,106.html" class="cta-button" target="_blank">Check Out</a>
         </div>
         <div class="event-card">
-          <img src="images/clean-up_month.jpg" alt="">
+          <img src="images/clean-up_month.jpg" alt="clean-up_month">
           <h3 class="event-title">National Cleanup Month</h3>
           <p class="event-date">Date: to be determined</p>
           <p class="event-location">Location: to be determined</p>
           <a href="https://www.nationalcleanupday.org/" class="cta-button" target="_blank">Check Out</a>
         </div>
         <div class="event-card">
-          <img src="images/cleanup-day.jpeg" alt="">
+          <img src="images/cleanup-day.jpeg" alt="cleanup-day">
           <h3 class="event-title">World Clean Up</h3>
           <p class="event-date">Date: Sep 14-20, 2025</p>
           <p class="event-location">Location: Copenhagen</p>
